...
        }
      }

      Spacer(modifier = Modifier.height(4.dp))

      Text(
        text = "Tap anywhere to exit",
        style = MaterialTheme.typography.caption2,
        color = Color(0xFF666666),
        textAlign = TextAlign.Center,
      )
    }
  }
...
